--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node_modules/.bin/webpack"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,8 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "pan.js": "0.0.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "webpack": "^3.8.1"
